--- a/index.html
+++ b/index.html
@@ -154,6 +154,8 @@ canvas {
   .controls { flex-direction: column; align-items: stretch; }
   select, button { width: 100%; }
   .metrics { grid-template-columns: 1fr; }
+  .grid > .card:nth-child(1) { order: 1; }
+  .grid > .card:nth-child(2) { order: 2; margin-top: 12px; }
 }
 
   </style>
@@ -338,3 +340,4 @@ canvas {
   </script>
 </body>
 </html>
+
